<resources>
    <string name="app_name">Blit</string>
    <string name="choose_your_beginning_city">Choose your beginning City</string>
    <string name="dummyText">DummyText</string>
    <string name="choose_your_destination_city">choose_your_destination_city</string>
    <string name="form">از:</string>
    <string name="to">به:</string>
    <string name="beginningCity">مشهد</string>
    <string name="destinationCity">تهران</string>
    <string name="searchButton">کو بِبینُم؟</string>
    <string name="cityNotFound">شهرت رِ پیدا نَکِردُم</string>
    <string name="destinationCityAndBeginningCityAreSame">می‌خِی از همی جِ بیِی همی جِ؟</string>
    <string name="Bus">اتوبوس</string>
    <string name="Train">قطار</string>
    <string name="AirPlane">هواپیما</string>
</resources>
